<resources>

    <string name="app_name">JeopardyScorer</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Jeopardy Scorer</string>
    <string name="instructions">Instructions</string>
    
    <string name="r1b1">$200</string>
    <string name="r1b2">$200</string>
    <string name="r1b3">$200</string>
    <string name="r1b4">$200</string>
    <string name="r1b5">$200</string>
    <string name="r1b6">$200</string>
    <string name="r2b1">$400</string>
    <string name="r2b2">$400</string>
    <string name="r2b3">$400</string>
    <string name="r2b4">$400</string>
    <string name="r2b5">$400</string>
    <string name="r2b6">$400</string>
    <string name="r3b1">$600</string>
    <string name="r3b2">$600</string>
    <string name="r3b3">$600</string>
    <string name="r3b4">$600</string>
    <string name="r3b5">$600</string>
    <string name="r3b6">$600</string>
    <string name="r4b1">$800</string>
    <string name="r4b2">$800</string>
    <string name="r4b3">$800</string>
    <string name="r4b4">$800</string>
    <string name="r4b5">$800</string>
    <string name="r4b6">$800</string>
    <string name="r5b1">$1000</string>
    <string name="r5b2">$1000</string>
    <string name="r5b3">$1000</string>
    <string name="r5b4">$1000</string>
    <string name="r5b5">$1000</string>
    <string name="r5b6">$1000</string>
    <string name="dbl">Double Jeopardy</string>
    
    <string name="finalj">Final Jeopardy</string>
    <string name="curscore">Current score:</string>
    <string name="finalscore">Final score:</string>
    <string name="newgame">New Game</string>
    <string name="finalcorrect"># Correct:</string>
    <string name="finalwrong"># Wrong:</string>
    <string name="gamestats">Game Stats</string>
    <string name="highscore">High Score:</string>
	
    <string name="score">0</string>
    <string name="toggleon">Correct</string>
    <string name="toggleoff">Incorrect</string>
    <string name="wager">Daily Double</string>
    <string name="finalwager">Enter your wager</string>
    <string name="correct">+</string>
    <string name="incorrect">-</string>
    
    <string name="pref_orientation">Orientation</string>
    <string name="pref_orientation_default">Horizontal</string>
    
   	<string name="dialog_instructions">Welcome to Jeopardy Scorer! As each question is asked, click the corresponding tile to cycle through the modes 
   	    (think Minesweeper.) Tap once to mark the question as correct, once more to mark it as incorrect, once more to mark it as unanswered, and one final 
   	    time to restore it to the original state. For daily doubles, mark the tile it was on as unanswered, then type your wager into the Daily Double box.
   	    If your answer was correct, press the green + button and if it was incorrect, press the red - button. Press the Double Jeopardy button to move on to 
   	    Double Jeopardy. After that is complete, move to Final Jeopardy.</string>
    

</resources>