<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    	
		<LinearLayout
		    android:id="@+id/row1"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:weightSum="6.0">
	
	    	<Button
	    	    android:id="@+id/r1b1"
	    	    android:layout_width="0dip"
	    	    android:layout_height="@dimen/row_height"
	    	    android:layout_weight="1"
	    	    android:onClick="score"
	    	    android:text="@string/r1b1"
	    	    android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp"
	    	     />
	    
		    <Button
		        android:id="@+id/r1b2"
		        android:layout_width="0dip"
		        android:layout_weight="1"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r1b2"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    	    
		    <Button
		        android:id="@+id/r1b3"
		        android:layout_width="0dip"
		        android:layout_weight="1"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r1b3"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r1b4"
		        android:layout_width="0dip"
		       	android:layout_weight="1"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r1b4"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r1b5"
		        android:layout_width="0dip"
		        android:layout_weight="1"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r1b5"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r1b6"
		        android:layout_width="0dip"
		        android:layout_weight="1"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r1b6"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		</LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/row2"
	        android:layout_below="@+id/row1"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:weightSum="6.0">
	    	<Button
	        	android:id="@+id/r2b1"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r2b1"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
	    
		    <Button
		        android:id="@+id/r2b2"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r2b2"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r2b3"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r2b3"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r2b4"
		       	android:layout_weight="1"
		       	android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r2b4"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r2b5"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r2b5"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r2b6"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r2b6"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/row3"
	        android:layout_below="@+id/row2"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:weightSum="6.0">
	    	<Button
	        	android:id="@+id/r3b1"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r3b1"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
	    
		    <Button
		        android:id="@+id/r3b2"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r3b2"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r3b3"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r3b3"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r3b4"
		       	android:layout_weight="1"
		       	android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r3b4"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r3b5"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r3b5"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r3b6"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r3b6"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/row4"
	        android:layout_below="@+id/row3"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:weightSum="6.0">
	    	<Button
	        	android:id="@+id/r4b1"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r4b1"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
	    
		    <Button
		        android:id="@+id/r4b2"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r4b2"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r4b3"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r4b3"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r4b4"
		       	android:layout_weight="1"
		       	android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r4b4"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r4b5"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r4b5"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r4b6"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r4b6"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		</LinearLayout>
		
	    <LinearLayout
	        android:id="@+id/row5"
	        android:layout_below="@+id/row4"
	    	android:layout_width="fill_parent" 
	    	android:layout_height="wrap_content"
	    	android:weightSum="6.0" >
	    	<Button
	        	android:id="@+id/r5b1"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r5b1"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
	    
		    <Button
		        android:id="@+id/r5b2"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r5b2"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r5b3"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r5b3"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r5b4"
		       	android:layout_weight="1"
		       	android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r5b4"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r5b5"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r5b5"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		    
		    <Button
		        android:id="@+id/r5b6"
		        android:layout_weight="1"
		        android:layout_width="0dip"
		        android:layout_height="@dimen/row_height"
		        android:onClick="score"
		        android:text="@string/r5b6"
		        android:background="@drawable/b_button"
	    	    android:textColor="@color/gold"
	    	    android:textStyle="bold"
	    	    android:textSize="20dp" />
		</LinearLayout>
    
	    <LinearLayout
	        android:id="@+id/row6"
	        android:layout_below="@+id/row5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:weightSum="1" >
		    
	        <EditText
		        android:id="@+id/editText1"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
		        android:hint="@string/wager"
		        android:inputType="number"
		        android:textSize="20dp" >
		
		        <requestFocus
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" />

		    </EditText>

		    <Button
		        android:id="@+id/button11"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight=".1"
		        android:onClick="dailyDoubleRight"
		        android:text="@string/correct"
		        android:background="@drawable/g_button"
		        android:textColor="@color/gold"
		        android:textStyle="bold" />
		
		    <Button
		        android:id="@+id/button12"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight=".1"
		        android:onClick="dailyDoubleWrong"
		        android:text="@string/incorrect"
		        android:background="@drawable/r_button"
		        android:textColor="@color/gold"
		        android:textStyle="bold" />
		    
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"
		        android:text="@string/score"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:gravity="center_horizontal" />
		    
    		<Button
		        android:id="@+id/dbl"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:text="@string/dbl"
		        android:onClick="dbl"
		        android:background="@drawable/b_button"
		        android:textColor="@color/gold"
		        android:textStyle="bold"
		        android:textSize="20dp" />
		    </LinearLayout>

</RelativeLayout>
